Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.3(EOL), 10.4(EOL), 10.5(EOL)
-
None
Description
CREATE OR REPLACE TABLE t1 (name CHAR(30), star_rating TIME); |
INSERT INTO t1 VALUES ('Lord of the Ladybirds', 5); |
INSERT INTO t1 VALUES ('Lord of the Ladybirds', 3); |
INSERT INTO t1 VALUES ('Lady of the Flies', 1); |
INSERT INTO t1 VALUES ('Lady of the Flies', 2); |
INSERT INTO t1 VALUES ('Lady of the Flies', 5); |
SELECT name, PERCENTILE_DISC(0.5) |
WITHIN GROUP (ORDER BY star_rating) |
OVER (PARTITION BY name) AS pc FROM t1; |
mysqld: /home/bar/maria-git/server.10.3/sql/field.h:3170: Field_datetime_with_dec::Field_datetime_with_dec(uchar*, uchar*, uchar, Field::utype, const LEX_CSTRING*, uint): Assertion `dec <= 6' failed.
|
Attachments
Issue Links
- is blocked by
-
MDEV-20273 Add class Item_sum_min_max
-
- Closed
-
- relates to
-
MDEV-20278 PERCENTILE_DISC() returns a wrong data type
-
- Closed
-
-
MDEV-20280 PERCENTILE_DISC() rejects temporal and string input
-
- Closed
-