MDEV-20272 PERCENTILE_DISC() crashes on a temporal type input