sql/item_windowfunc.cc
@@ -172,25 +172,38 @@ void Item_window_func::split_sum_func(THD *thd, Ref_ptr_array ref_pointer_array,
 
 bool Item_window_func::check_result_type_of_order_item()
 {
-  if (only_single_element_order_list())
+  switch (window_func()->sum_func()) {
+  case Item_sum::PERCENTILE_CONT_FUNC:
   {
-    Item *src_item= window_spec->order_list->first->item[0];
-    Item_result rtype= src_item->cmp_type();
+    Item_result rtype= window_spec->order_list->first->item[0]->cmp_type();
     // TODO (varun) : support date type in percentile_cont function
     if (rtype != REAL_RESULT && rtype != INT_RESULT &&
         rtype != DECIMAL_RESULT && rtype != TIME_RESULT)
     {
       my_error(ER_WRONG_TYPE_FOR_PERCENTILE_FUNC, MYF(0), window_func()->func_name());
-      return TRUE;
+      return true;
     }
-    if (window_func()->sum_func() == Item_sum::PERCENTILE_DISC_FUNC)
+    return false;
+  }
+  case Item_sum::PERCENTILE_DISC_FUNC:
+  {
+    Item *src_item= window_spec->order_list->first->item[0];
+    Item_result rtype= src_item->cmp_type();
+    // TODO-10.5: Fix MDEV-20280 PERCENTILE_DISC() rejects temporal and string input
+    if (rtype != REAL_RESULT && rtype != INT_RESULT && rtype != DECIMAL_RESULT)
     {
-      Item_sum_percentile_disc *func=
-        static_cast<Item_sum_percentile_disc*>(window_func());
-      func->set_handler(src_item->type_handler());
-      func->Type_std_attributes::set(src_item);
-      Type_std_attributes::set(src_item);
+      my_error(ER_WRONG_TYPE_FOR_PERCENTILE_FUNC, MYF(0), window_func()->func_name());
+      return true;
     }
+    Item_sum_percentile_disc *func=
+      static_cast<Item_sum_percentile_disc*>(window_func());
+    func->set_handler(src_item->type_handler());
+    func->Type_std_attributes::set(src_item);
+    Type_std_attributes::set(src_item);
+    return false;
+  }
+  default:
+    break;
   }
   return FALSE;
 }
